editor-components/slider/slider6/slider6.module.scss
@use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;

.container {
  padding: calc(var(--composer-gap-lg) * 2) 0px calc(var(--composer-gap-lg) * 3) 0px !important;

  .max-content {
    display: flex;
    flex-direction: column;
    gap: var(--composer-gap-lg);
    overflow: visible;

    .vertical-content {
      padding: 0 var(--composer-gap-xl);

      .subtitle,
      .title,
      .description {
        content: "";
      }

      .button-container {
        display: flex;
        flex-wrap: wrap;
        justify-content: center;
        gap: var(--composer-gap-sm);

        .button {
          .button-text {
            content: "";
          }
        }
      }
    }

    .slider-parent {
      width: 100%;
      margin: auto;
      margin-bottom: 0;
      overflow: visible;

      .carousel {
        width: 100%;

        :global(.slick-list) {
          :global(.slick-track) {
            display: flex;
            align-items: stretch;
            gap: var(--composer-gap-lg);

            :global(.slick-slide) {
              height: auto;
              padding: 0;
            }
          }
        }

        .card {
          width: 100%;
          height: 100%;
          display: flex;
          flex-direction: column;
          border-radius: var(--composer-border-radius-sm) !important;

          .content-div {
            border: 1px solid rgba(var(--composer-font-color-primary-rgb), 0.1);
            transition: transform var(--composer-transition-duration-normal), filter var(--composer-transition-duration-normal);
            min-height: 300px;
            height: 100%;
            gap: 0;

            .left-part {
              flex: 1;
              display: flex;
              flex-direction: row;
              flex-wrap: nowrap;
              width: 100%;
              align-items: stretch;
              align-items: center;
              justify-content: center;

              .vert-text {
                writing-mode: vertical-rl;
                text-orientation: mixed;
                transform: rotate(180deg);
                color: var(--composer-font-color-primary);
                text-align: center;
                margin: var(--composer-gap-sm) var(--composer-gap-md);
                white-space: normal;
                overflow: hidden;
                text-overflow: ellipsis;
                display: block;
              }

              .image-wrapper {
                position: relative;
                min-height: 250px;
                flex: 1;
                height: 100%;

                .image {
                  position: absolute;
                  height: 100%;
                  width: 100%;
                  object-fit: cover;
                  object-position: center;
                }

                .overlay {
                  position: absolute;
                  top: 0;
                  left: 0;
                  width: 100%;
                  height: 100%;
                  background-color: var(--composer-overlay-color);
                  z-index: 1;
                }
              }
            }

            .no-image {
              flex: unset;
              width: auto;
            }

            .right-part {
              flex: 1;
              padding: var(--composer-gap-lg) var(--composer-gap-md);
              height: fit-content;
              align-items: flex-start;

              .card-subtitle,
              .card-description {
                color: var(--composer-tertiary-color);
                text-align: left;
              }

              .card-title {
                color: var(--composer-font-color-primary);
                text-align: left;
              }

              .card-button {
                display: flex;
                justify-content: left;
                width: 100%;

                .card-button-text {
                  content: "";
                }

                .card-icon {
                  line-height: 0;
                }
              }
            }
          }

          &.nextSlide,
          &.prevSlide {
            filter: blur(var(--composer-gap-xs));
          }
        }

        :global(.slick-prev),
        :global(.slick-next) {
          position: absolute;
          display: flex !important;
          align-items: center;
          justify-content: center;
          height: 45px;
          width: 45px;
          cursor: pointer;
          top: auto;
          bottom: -85px;
          padding: 0;
          border: 1px solid var(--composer-tertiary-color);
          border-radius: 50%;
          outline: none;
          z-index: 10;
          transition: transform 0.3s ease, border-color 0.3s ease, background 0.3s ease;
          transform: translate(0, 0);

          &:hover {
            outline: none;
            background: transparent;
            color: transparent;
            border-color: transparent;

            &:before {
              opacity: 1;
            }
          }

          &:before {
            font-family: inherit;
            font-size: 10px;
            line-height: 1;
            color: var(--composer-font-color-primary);
            opacity: 0.75;
            transition: opacity 0.3s ease;
          }
        }

        :global(.slick-prev) {
          left: 90px;

          &:hover {
            transform: translate(-20px, 0);
          }

          &:before {
            content: "◀";
          }
        }

        :global(.slick-next) {
          right: 90px;

          &:hover {
            transform: translate(20px, 0);
          }

          &:before {
            content: "▶";
          }
        }

        :global(.slick-dots) {
          bottom: -90px;
          display: flex !important;
          justify-content: center;
          align-items: center;
          pointer-events: none;

          :global(li) {
            pointer-events: auto;

            :global(button) {
              padding: 0;
              border: none;
              background: transparent;
              font-size: 0;
              width: 12px;
              height: 12px;
              display: flex;
              align-items: center;

              &::before {
                content: "";
                display: block;
                background-color: var(--composer-primary-color);
                height: 2px;
                width: 100%;
                opacity: 0.3;
                transition: opacity 0.3s ease;
              }
            }

            &:global(.slick-active) :global(button)::before {
              opacity: 1;
            }
          }
        }

        .carousel--multipleCards {
          width: auto;
        }
      }
    }

    .dots-container {
      display: none;
    }

    .single-item {
      :global(.slick-list) {
        :global(.slick-track) {
          margin-left: unset !important;
        }
      }
    }
  }
}

@container (max-width: #{$composer-tablet-width}) {
  .container {
    .max-content {
      gap: var(--composer-gap-xl);

      .vertical-content {
        padding: 0 var(--composer-gap-lg);
      }

      .slider-parent .carousel {

        :global(.slick-prev),
        :global(.slick-next) {
          height: 35px;
          width: 35px;
          bottom: -80px;

          &:before {
            font-size: 8px;
          }
        }

        :global(.slick-prev) {
          left: 70px !important;
        }

        :global(.slick-next) {
          right: 70px !important;
        }
      }
    }
  }
}

@container (max-width: #{$composer-phone-width}) {
  .container {
    padding: var(--composer-gap-xl) 0px calc(var(--composer-gap-lg) * 4) 2px !important;

    .max-content {

      .vertical-content {
        padding: 0 var(--composer-gap-md);
      }

      .slider-parent {
        .carousel {
          :global(.slick-list) {
            :global(.slick-track) {
              gap: 0;
            }
          }

          .card {
            .content-div {
              flex-direction: column;

              .left-part {
                flex-direction: column;
                align-items: unset;

                .vert-text {
                  writing-mode: unset;
                  transform: unset;
                }

                .image-wrapper {
                  flex: unset;
                }
              }

              .right-part {
                padding: var(--composer-gap-md);
              }
            }
          }

          :global(.slick-prev),
          :global(.slick-next) {
            height: 30px;
            width: 30px;
            bottom: -90px;
          }

          :global(.slick-prev) {
            left: var(--composer-gap-lg) !important;

            &:hover {
              transform: translate(-10px, 0) !important;
            }
          }

          :global(.slick-next) {
            right: var(--composer-gap-lg) !important;

            &:hover {
              transform: translate(10px, 0) !important;
            }
          }

          :global(.slick-dots) {
            bottom: -30px;
          }
        }
      }
    }
  }
}

